# virtualpatch_evaluation

./: README.md
exploits/AllApplications/: settings.gradle
exploits/BluetoothAlias/: settings.gradle
exploits/BroadcastHijack/: settings.gradle
exploits/ChangeDeviceSettings/: README.md  settings.gradle
exploits/ContentProviderUriValidation/: settings.gradle
exploits/DoSWidthCalculation/: README.md  settings.gradle
exploits/DocumentMetadataLeak/: README.md  settings.gradle
exploits/DownloadManagerSQLi/: README.md  settings.gradle
exploits/EndCallAttack/: settings.gradle
exploits/HostnameParsing/: settings.gradle
exploits/LeakContact/: settings.gradle
exploits/LegitInstaller/: README.md  settings.gradle
exploits/LinkPhishing/: settings.gradle
exploits/LocaleBootloop/: README.md
exploits/LongNotificationDOS/: settings.gradle
exploits/MaliciousToast/: README.md  settings.gradle
exploits/NetworkInfoLeaker/: README.md  settings.gradle
exploits/PackageInstallerSpoofing/: README.md  settings.gradle
exploits/QualcomQmmiLeaker/: settings.gradle
exploits/SIPLeaker/: settings.gradle
exploits/TextLineDoS/: README.md  settings.gradle
exploits/UnprotectedBroadcastPixel/: README.md  settings.gradle
exploits/VulnerableContentProviderUriValidation/: README.md  settings.gradle
exploits/btmms/: settings.gradle
exploits/nobreak/: settings.gradle
exploits/shiva/: README.md  settings.gradle
patches/: compile_patches.py
patches/BluetoothAliasPatch/: README.md  settings.gradle
patches/BroadcastHijackPatch/: settings.gradle
patches/BtMMSPatch/: settings.gradle
patches/ClickableToastPatch/: settings.gradle
patches/ContentProviderUriValidationPatch/: README.md  settings.gradle
patches/DoSWidthCalculationPatch/: README.md  settings.gradle
patches/DownloadManagerSQLiPatch/: settings.gradle
patches/EndCallPatch/: settings.gradle
patches/HostnameParsingPatch/: README.md  settings.gradle
patches/LeakContactPatch/: settings.gradle
patches/MinikinPatch/app/src/main/cpp/: CMakeLists.txt  minikinpatch.c
(+385 files in other folders)
